--- a/css/estilos.css
+++ b/css/estilos.css
@@ -17,7 +17,7 @@ h1 {
 .container {
     max-width: 400px;
     margin: 0 auto;
-    background-color: #ffffff;
+    background-color: #f2f2f2;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -28,7 +28,7 @@ label {
     display: block;
     margin-bottom: 10px;
     font-weight: bold;
-    color: #333;
+    color: #555;
 }
 
 /* Estilos para los campos de entrada y el botón */
@@ -42,12 +42,12 @@ select {
     border: 1px solid #ccc;
     border-radius: 3px;
     font-size: 16px;
-    color: #555;
+    color: #333;
     background-color: #f9f9f9;
 }
 
 /* Estilos para el botón de envío */
-input[type="submit"] {
+button[type="submit"] {
     background-color: #007BFF;
     color: #fff;
     padding: 10px 20px;
@@ -58,14 +58,16 @@ input[type="submit"] {
     transition: background-color 0.3s ease;
 }
 
-input[type="submit"]:hover {
+button[type="submit"]:hover {
     background-color: #0056b3;
 }
 
-/* Estilos para el fondo del formulario */
-body {
-    background-image: url('tu-imagen-de-fondo.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+/* Estilos para los radios */
+input[type="radio"] {
+    margin-right: 10px;
+}
+
+/* Estilos para los radios */
+input[type="radio"] + label {
+    color: #333;
 }
